Fix for bug #184858 (Find not finding all matches)

Modified |ContentIsInTraversalRange()| to return true if aContent is a textnode and contains one of the traversal range end points.

r=jfrancis@netscape.com  sr=sfraser@netscape.com